<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minekkit</string>
    <string name="hello_world">Hello world!</string>

    <string name="acercade1">
        Esta aplicaci\u00f3n fue diseñada, desarrollada y distribuida por droidkkit, un equipo de Overflow DT.
    </string>
    <string name="copyright">Minekkit – Todos los derechos reservados 2012–2014</string>

    <string name="recompensas">Recompensas</string>
    <string name="versionComplete">Versión</string>
    <string name="version">0.12Beta</string>
    <string name="actionbar_perfil">Perfil</string>
    <string name="actionbar_pm">PM</string>
    <string name="actionbar_settings">Opciones</string>
    <string name="actionbar_mapa">Ver mapa</string>
    <string name="actionbar_exit">Salir</string>

    <string name="label_acercade">Acerca de</string>
    <string name="label_recompensas">Recompensas</string>
    <string name="label_denuncias">Denuncia</string>
    <string name="label_mapa">Mapa Online</string>
    <string name="label_menuinicial"></string>
    <string name="label_wiki">Wiki</string>

    <string name="denuncia_formulario">Formulario de denuncia</string>
    <string name="denuncia_titulo">T\u00edtulo de la denuncia</string>
    <string name="denuncia_fecha">Fecha del acontecimiento (D\u00eda/Mes/A\u00f1o)</string>
    <string name="denuncia_horario">Horario de lo sucedido (Hora:Minutos)</string>
    <string name="denuncia_horario_gmt">(ARG)</string>
    <string name="denuncia_mundo">Mundo</string>
    <string name="denuncia_ciudad">Ciudad</string>
    <string name="denuncia_explicacion">Explicaci\u00f3n del hecho</string>
    <string name="denuncia_usuarios">Usuarios involucrados</string>
    <string name="denuncia_solucion">Soluci\u00f3n propuesta</string>

    <string name="boton_atras">Atr\u00e1s</string>
    <string name="boton_enviar">Enviar</string>

    <string name="otros_barra">/</string>
    <string name="otros_dospuntos">:</string>

    <string name="login_conectando">Conectando con el servidor...</string>

    <string name="wiki_titulo">MK Wiki</string>
    <string name="actionbar_logout">Logout</string>
    <string name="label_pms">PMs</string>
    <string name="label_recoxdia">Recoplas por d\u00eda</string>
    <string name="login_fallo_timeout">No se puede conectar con el servidor. Intente m\u00e1s tarde.</string>
    <string name="login_fallo_version">Versi\u00f3n desactualizada, por favor actualice la aplicaci\u00f3n y vuelva a intentar.</string>
    <string name="login_fallo_auth">Usuario o contrase\u00f1a incorrectos. Int\u00e9ntalo otra vez.</string>
    <string name="single_pm_responder">Responder</string>
    <string name="editnewpm_enviar">Enviar</string>
    <string name="reco_x_dia_cargando">Cargando...</string>
    <string name="reco_x_dia_obtenerReco">Obtener Recoplas</string>
    <string name="claimReco_error_solicitud">Ha ocurrido un error en la solicitud</string>
    <string name="claimReco_error_exceso">Tienes m\u00e1s de 50 Recoplas. Gasta unos cuantos en la tienda y volv\u00e9 a solicitar tu Reco Gratis!</string>
    <string name="claimReco_ok_entregado">Has obtenido 1 Recoplas. Regresa ma\u00f1ana para pedir otro!</string>
    <string name="claimReco_error_regresaMasTarde">Todav\u00eda no pasaron 24 horas. Regres\u00e1 m\u00e1s tarde!</string>
    <string name="newPM">Nuevo PM</string>
    <string name="profile">Perfil</string>
    <string name="CantConnect">No se puede conectar con el servidor. Intente m\u00e1s tarde.</string>
    <string name="playersOnline">Players Online</string>
    <string name="sendMP">Enviar Mensaje</string>
    <string name="playersON">Players Online</string>
    <string name="denunciaExito">La denuncia fue creada con éxito. Revisá el foro para ver el estado de la misma.</string>
    <string name="denunciaFail">No se pudo crear la denuncia. Intentalo más tarde.</string>
    <string name="enviandoDenuncia">Enviando denuncia. Por favor, espere...</string>
    <string name="denunciaFailDatos">No se ha podido crear la Denuncia, verifique los datos ingresados.</string>
    <string name="just_now">Recién</string>
    <string name="label_config">Configuracion</string>
    <string name="quitar_imagen">Quitar Imagen</string>
    <string name="denuncia_pruebas">Añadir Prueba</string>
    <string name="agregar_imagen">Agregar Imagen</string>
    <string name="login_actualizando">Actualizando Aplicación</string>

    <string name="pref_sync_frequency">Frecuencia de Sincronización</string>
    <string name="pref_sync_frequency_summary">Elegir la frecuencia</string>
    <string name="pref_update_setting">Configuración de PMs</string>
    <string name="drawer_open">Abierto</string>
    <string name="drawer_close">Cerrado</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="mk_azul_1">#33b5e5</color>
    <color name="mk_azul_2">#0099cc</color>
    <color name="mk_verde_1">#92c53e</color>
    <color name="mk_verde_2">#669900</color>
    <color name="mk_amarillo_1">#f6e737</color>
    <color name="mk_naranja_1">#ffbb33</color>
    <color name="mk_naranja_2">#ff8800</color>
    <color name="mk_blanco_1">#FFFFFF</color>
    <color name="mk_rojo_1">#cc0000</color>
    <color name="mk_rojo_2">#ff4444</color>
    <color name="mk_violeta_1">#aa66cc</color>
    <color name="mk_violeta_2">#9933cc</color>
    <color name="mk_negro_50p">#80000000</color>

</resources>
