<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_opciones"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/actionbar_settings"
        android:icon="@android:drawable/ic_menu_preferences" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/actionbar_logout"
        android:orderInCategory="4" />
    <item
        android:id="@+id/menu_acercaDe"
        android:title="@string/label_acercade"
        android:orderInCategory="3" />

    <item
        android:id="@+id/menu_salir"
        android:title="@string/actionbar_exit"
        android:orderInCategory="5" />
    <item
        android:id="@+id/menu_sendPM"
        android:title="@string/sendMP"
        android:orderInCategory="1" />
    <item
        android:id="@+id/menu_players_on"
        android:title="@string/playersON"
        android:orderInCategory="1" />

    <item
        android:id="@+id/menu_perfil"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_perfil"
        android:title="@string/actionbar_perfil" />

    <item
        android:id="@+id/menu_pm"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_pms"
        android:title="@string/actionbar_pm" />

</menu>
