<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="cerrar"
    android:orientation="vertical"
    android:background="@drawable/bg_640x960_3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/mk_negro_50p"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img_logo_droidkkit"
            android:src="@drawable/logo_droidkkit"
            android:layout_weight="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/acercade1"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:phoneNumber="false"
            android:id="@+id/tv_descripcion" />

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/copyright"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/version"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_copyright"
            android:layout_centerHorizontal="true"
            android:onClick="cerrar"
            android:text="@string/boton_atras"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#33b5e5"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>
